# Aimo

./: .gitignore  CMakeLists.txt  README.md
include/: Bitboard.h  Board.h  Evaluation.h  Movegen.h  chess_utils.h  fib.h
src/: Bitboard.cpp  Board.cpp  Evaluation.cpp  Movegen.cpp  chess_utils.cpp  fib.cpp  main.cpp
tests/: CMakeLists.txt  bitboard_test.cpp  test_main.cpp
